<resources>
    <string name="app_name">KONNECT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Universidad Católica de Santa María</string>
    <string name="nav_header_subtitle">Konnect</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Mis conexiones</string>
    <string name="info">Información</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar sesión</string>

    <!-- Landing strings. -->
    <string name="WelcomeContent">Bienvenido a KONNECT, conecta y haz que tu red crezca. </string>
    <string name="RecommenderContent">Conecta en dos simples pasos. Escanea y konecta!. </string>
    <string name="welcome_2">Made in UCSM</string>
    <string name="welcome_1">Bienvenido a CONNECT</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="ir_a_mis_asistencias">VER MIS CONTACTOS</string>
    <string name="tienes_cuenta">¿Tienes una \ncuenta?</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
</resources>