<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".login_signup.RegisterActivity"
android:background="@color/colorAccentLanding"
android:focusableInTouchMode="true"
android:gravity="center"
android:layout_gravity="center">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginStart="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="Aquí \n!Comienza \nel cambio!"
                android:textColor="@color/whiteTextColor" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login_hero"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="13dp"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="Correo institucional">

                            <EditText
                                android:id="@+id/registerUsuario"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="@string/usuario"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="password_toggle"
                            app:helperText="8 digitos">

                            <EditText
                                android:id="@+id/registerContrasena"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="@string/contrasena"
                                android:textColorHint="@color/black"
                                android:inputType="textPassword"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="Pepito Peréz">

                            <EditText
                                android:id="@+id/registerNombre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Nombre"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="Administración de empresas">

                            <EditText
                                android:id="@+id/registerCarrera"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Carrera profesional"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="Semestre de estudios">

                            <EditText
                                android:id="@+id/registerSemestre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Octavo semestre"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="Cuentános más sobre ti">

                            <EditText
                                android:id="@+id/registerDescripcion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Sobre mi"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="918389387">

                            <EditText
                                android:id="@+id/registerWhatsapp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Whatsapp"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="https://www.linkedin.com/in/inniciaucsm/">

                            <EditText
                                android:id="@+id/registerLinkedin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="LinkedIn"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="https://www.facebook.com/inniciaucsm">

                            <EditText
                                android:id="@+id/registerFacebook"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Facebook"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:endIconMode="clear_text"
                            app:helperText="https://www.instagram.com/inniciaucsm/">

                            <EditText
                                android:id="@+id/registerInstagram"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="8"
                                android:hint="Instagram"
                                android:textColorHint="@color/black"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="#333232" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/login_button"
                            android:text="INGRESAR"
                            android:textColor="@color/white" />

                        <TextView
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/blue_200"
                            android:textSize="14sp"
                            android:text="Inicia sesión"
                            android:onClick="onRegisterClick"
                            android:layout_marginBottom="5dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_weight="3"/>

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INNICIA"
                android:textColor="@color/white"
                android:layout_weight="6"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/grey_color"
                android:text="@string/app_name"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@color/white"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onRegisterClick"
        android:src="@drawable/ic_back_img" />

</RelativeLayout>